# DejaView

./: .gitignore  README.md
bash_scripts/: dejaview.sh  draco.sh  gpcc.sh  octree.sh  run_all.sh
dejaview/: CMakeLists.txt  README.txt  compression.cpp  decompression.cpp  find_closest_frame.py  find_closest_frame_multiple_days.py  my_variables.h
draco/: CMakeLists.txt  draco_compression.cpp  draco_compression_fast.cpp  draco_decompression.cpp  draco_decompression_fast.cpp
lib/: my_draco.cpp  my_draco.h  my_lzma.cpp  my_lzma.h  my_pcl.cpp  my_pcl.h  my_utils.cpp  my_utils.h
metrics/: CMakeLists.txt  PSNR.cpp  PSNR_fast.cpp  RTE.cpp  RTE_fast.cpp  chamferDistance.cpp  chamferDistance_fast.cpp  script_RTE.bash
misc/: convert_dir.py  pcd2ply.py  ply2pcd.py
mpeg-pcc-tmc13-release-v14.0/: script.sh
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r010/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r02/: decoder.cfg  encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r03/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r04-notused/: decoder.cfg  encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r05/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r06-notused/: decoder.cfg  encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r07/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r08-not_used/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom/r09-notused/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r01/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r02/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r03/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r04/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r05/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r06/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r07/: encoder.cfg
mpeg-pcc-tmc13-release-v14.0/cfg/octree-predlift/lossy-geom-lossy-attrs/custom_2/r08/: encoder.cfg
octree/: CMakeLists.txt  number_of_points.cpp  octree_compression.cpp  octree_compression_fast.cpp  octree_decompression.cpp  octree_decompression_fast.cpp
